# ansible-role-lunasa-hsm

./: .gitreview  README.rst  setup.cfg  test-requirements.txt  tox.ini
defaults/: main.yaml
files/: list-ha-groups
tasks/: main.yaml  register_client.yaml  register_hsm.yaml  unregister_client.yaml
templates/: list-ha-groups.j2
