[metadata]
name = ansible-role-lunasa-hsm
summary = ansible-role-lunasa-hsm - Ansible role to configure Lunasa HSM clients.
description-file =
    README.rst
author = TripleO Team
author-email = alee@redhat.com
home-page = https://github.com/vakwetu/ansible-role-lunasa-hsm
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/roles/lunasa-hsm/defaults = defaults/*
    share/ansible/roles/lunasa-hsm/meta = meta/*
    share/ansible/roles/lunasa-hsm/tasks = tasks/*
    share/ansible/roles/lunasa-hsm/templates = templates/*
    share/ansible/roles/lunasa-hsm/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
