[metadata]
name = ansible-role-lunasa-hsm
summary = ansible-role-lunasa-hsm - Ansible role to configure Lunasa HSM clients.
description_file =
    README.rst
author = TripleO Team
author_email = alee@redhat.com
home_page = https://opendev.org/openstack/ansible-role-lunasa-hsm
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[files]
data_files =
    share/ansible/roles/lunasa_hsm/defaults = defaults/*
    share/ansible/roles/lunasa_hsm/meta = meta/*
    share/ansible/roles/lunasa_hsm/tasks = tasks/*
    share/ansible/roles/lunasa_hsm/templates = templates/*
    share/ansible/roles/lunasa_hsm/files = files/*
